fix: fix dark mode UI for on hover

--- a/web/src/App.less
+++ b/web/src/App.less
@@ -87,11 +87,15 @@ img {
   }
 }
 
+[data-theme="dark"] .select-box:hover {
+  background-color: rgba(255, 255, 255, 0.08) !important;
+}
+
 .store-select {
   display: flex;
   align-items: center;
   margin: 0 8px !important;
-  min-width: 160px;
+  min-width: 200px;
   max-width: 360px;
 }
 
@@ -110,6 +114,10 @@ img {
   &:hover {
     background-color: rgba(0, 0, 0, 0.05) !important;
   }
+}
+
+[data-theme="dark"] .rightDropDown:hover {
+  background-color: rgba(255, 255, 255, 0.08) !important;
 }
 
 .cs-conversation-header__content .cs-conversation-header__user-name {
